Bug 502347 - Cut > Open > Fit crashes Umbrello with a segfault
Summary: Cut > Open > Fit crashes Umbrello with a segfault
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-03 05:31 UTC by Dillon
Modified: 2025-04-06 20:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dillon 2025-04-03 05:31:12 UTC
SUMMARY
Deterministic sequence of UI interactions leads to a segmentation fault and Umbrello crashing. 

STEPS TO REPRODUCE
1. Open Umbrello
2. Select Cut and close the pop up window
3. Select Open, then Discard. Close the "Open File" pop up window. 
4. Select Fit

OBSERVED RESULT
Umbrello crashes with a segmentation fault.

VIDEO
https://youtu.be/vqmSrQ6zO2g

VERSIONS
Ubuntu 24.10

Reproduced on most recent version available via apt: umbrello 2.38.5 (Applications 23.08.5)
And on most recent version built from source: umbrello 2.38.70-8b195bd0e (experimental) (Applications 25.07.70)

BACKTRACE
```
Thread 1 "umbrello5" received signal SIGSEGV, Segmentation fault.
0x00007ffff6cf8074 in QGraphicsView::scene() const ()
   from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
(gdb) bt
#0  0x00007ffff6cf8074 in QGraphicsView::scene() const ()
   from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#1  0x0000555555981252 in UMLView::umlScene (this=0x0)
    at /home/dillon/git/umbrello/umbrello/umlview.cpp:53
#2  0x000055555591f95f in UMLApp::slotZoomFit (this=0x555555f2ab70)
    at /home/dillon/git/umbrello/umbrello/uml.cpp:706
#3  0x00005555556405a0 in UMLApp::qt_static_metacall (_o=0x555555f2ab70,
    _c=QMetaObject::InvokeMetaMethod, _id=73, _a=0x7fffffffcd90)
    at /home/dillon/git/umbrello/build/umbrello/libumbrello_autogen/EWIEGA46WW/moc_uml.cpp:556
#4  0x00007ffff5d24862 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007ffff6a6a634 in QAbstractButton::clicked(bool) ()
   from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#6  0x00007ffff6a6a8bf in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#7  0x00007ffff6a6c54f in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#8  0x00007ffff6a6c77b in QAbstractButton::mouseReleaseEvent(QMouseEvent*) ()
   from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#9  0x00007ffff6b732e6 in QToolButton::mouseReleaseEvent(QMouseEvent*) ()
   from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#10 0x00007ffff69b1258 in QWidget::event(QEvent*) ()
   from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#11 0x00007ffff696bef5 in QApplicationPrivate::notify_helper(QObject*, QEvent*)
    () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#12 0x00007ffff69746af in QApplication::notify(QObject*, QEvent*) ()
   from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#13 0x00007ffff5ce8c98 in QCoreApplication::notifyInternal2(QObject*, QEvent*)
    () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007ffff697252d in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) ()
   from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#15 0x00007ffff69cbcb7 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#16 0x00007ffff69cf3cf in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#17 0x00007ffff696bef5 in QApplicationPrivate::notify_helper(QObject*, QEvent*)
    () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#18 0x00007ffff5ce8c98 in QCoreApplication::notifyInternal2(QObject*, QEvent*)
    () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#19 0x00007ffff614ab87 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#20 0x00007ffff611afac in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#21 0x00007ffff08f63f6 in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#22 0x00007ffff41b7397 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007ffff4217dc7 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007ffff41b68b3 in g_main_context_iteration ()
   from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007ffff5d47afd in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#26 0x00007ffff5ce75ab in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#27 0x00007ffff5cf0286 in QCoreApplication::exec() ()
   from /lib/x86_64-linux-gnu/libQt5Core.so.5
#28 0x000055555562c4cc in main (argc=1, argv=0x7fffffffdcb8)
    at /home/dillon/git/umbrello/umbrello/main.cpp:258
```
Comment 1 Ralf Habacker 2025-04-06 12:23:52 UTC
Git commit 766ac2cd72a5511feaee979f9a2d9ba506586161 by Ralf Habacker.
Committed on 06/04/2025 at 12:23.
Pushed by habacker into branch 'release/25.04'.

Fix crash bug on pressing 'Fit' or '100%' when no diagram is available
FIXED-IN:25.04.0

M  +10   -0    umbrello/uml.cpp

https://invent.kde.org/sdk/umbrello/-/commit/766ac2cd72a5511feaee979f9a2d9ba506586161
Comment 2 Ralf Habacker 2025-04-06 20:04:18 UTC
Git commit 88dd64a0395ce239e157bbb759d5818c2c8f0fab by Ralf Habacker.
Committed on 06/04/2025 at 20:00.
Pushed by habacker into branch 'release/25.04'.

Fix more crashes when no diagram is available

M  +30   -0    umbrello/uml.cpp

https://invent.kde.org/sdk/umbrello/-/commit/88dd64a0395ce239e157bbb759d5818c2c8f0fab