Fix crash bug on pressing 'Fit' or '100%' when no diagram is available

BUG:502347
FIXED-IN:25.04.0